welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: not found: value jardinireFleur
jardinireFleur()
^